5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1613_2426.log
== TEST (2019-04-14 15:12:37) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:38) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:38) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:38) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:39) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:39) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:40) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:40) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))
-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:12:41) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

-- OUTPUT:
1382.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:22:24) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

dp=(vm*t)
qg=(dp/12)
print(dp,qg)
-- OUTPUT:
900.0 75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:22:27) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

dp=(vm*t)
qg=(dp/12)
print(dp,qg)
-- OUTPUT:
900.0 75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:23:01) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

dp=(vm*t)
qg=(dp/12)
print(dp,qg)
-- EXECUTION TIME:
0.24267
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0 75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0 50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0 8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:23:19) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

dp=(vm*t)
print(dp/12)
-- OUTPUT:
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:24:38) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))


print(dp/12)(vm*t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)(vm*t)
NameError: name 'dp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:24:38) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))


print(dp/12)(vm*t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)(vm*t)
NameError: name 'dp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:24:41) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))


print(dp/12)(vm*t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)(vm*t)
NameError: name 'dp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:25:40) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

print(vm*t)
print(dp/12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)
NameError: name 'dp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:25:41) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

print(vm*t)
print(dp/12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)
NameError: name 'dp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:26:22) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

print(vm*t)
print(dp/12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)
NameError: name 'dp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:26:27) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

dp=print(vm*t)
print(dp/12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(dp/12)
TypeError: unsupported operand type(s) for /: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:27:25) 
-- CODE:
t=float(input("digite o tempo"))
vm=float(input("digite a velocidade"))

dp=(vm*t)
print(dp)
print(dp/12)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
